shifting notes from introduction

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -165,11 +165,9 @@ While these approaches are  distinct in their pedagogical use, they stemmed from
 
 **GDPs can be used as meditational strategies within the AT framework and thus conceptual understanding of participant agency**
 
-MOVE THIS UP RIGHT TO THE TOP - NOTHING NEW HERE. PERHAPS AFTER INTRO WITH GERM CELL?
+CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015] & guitierez?.  
 
-GDPs are frequently used as mediational strategies -  [@lecusay_telementoring_2015].
-
-This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc.
+<!-- THIS PERHAPS IS FOR CONCLUSION? This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc. -->
 
 We can frame how these process contribute to the development of agency on the part of participants in the following way.
 
@@ -187,71 +185,8 @@ NOTE - IN CHAPTER 4 - OR HERE - MAKE THE LINK BETWEEN THE THREE PLANES AND THE U
 It is worthwhile to recall that the three planes can be concieved within a CHAT framework in that the planes can be interpreted as activity happening at wider or narrower scopes.
 
 Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, cultural activities, interpersonal activity and finally personal knowledge.
-
-DROP?
-The observation of these sections are also guided by concepts of the development of shared objects and meditational tools and strategies and their role in emerging community norms and practices.
-
-<!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
-
-
-
-<!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
-
-<!-- The focus on GDP as unit of analysis is supported in the following observations;
-
-- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
-- Through observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
--->
-
-<!-- The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs. -->
-
-
-<!-- In addition the following aspects of the use of GDPs merit attention in this chapter:
-
-NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
-
-- the value of completing something concrete a sense of sustaining achievement.
-- the utility of the smaller unit of analysis in aiding resource creation / facilitation for facilitators
-- any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
-- the ability to reflect after implementing each sub project, -->
-
-<!-- #### On GDPs as a concept to help analysis -->
-<!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
-Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
-<!-- My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing  -->
-
-<!-- CHECK AGAINST METHODOLOGY
-tie in conceptts of
-- leading activity
-- repeated activity / iteration
-- rising to the concrete - ie different forms of activity.  -->
-
-
-<!-- MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022].  -->
-
-<!-- DROP? We can ask where does knowledge of GDPs in participant come from. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005]. This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results. -->
-
-<!-- In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process. -->
-
-<!-- This study activity covers a wide spectrum of activity, in other chapters,  design stages involving discussion, planning, implementation and playtesting after each new game element. -->
-<!-- THERE IS OVERLAP HERE WITH THE LAST CHAPTER - HOW TO REMOVE THAT AND RETAIN CLARITY ?
-
-Thus in this study activity covers a full spectrum including close analysis of implementation of code structures. However these smaller operations are not worthy of being treated as an activity system in full. WHY MAKE THIS POINT. wHAT IS THE OVERALL MOTIVATION HERE?  -->
-
-<!--
-#### On GDPs as a germ concept to help practical development -->
-
-<!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
-
-<!-- around, game mechanics, game space, game polish and game challenges. -->
-
-<!-- LATER?
-
-AT provides a concept of rising to the concrete which invites analysis of how the construct of  GDPs can be be adapted to serve the development of a game making community at different scopes of activity. To illustrate this concept we can use Marx's concept of exchange as a germ-cell for analysis of capitalism.  -->
-<!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
-
-
 ## Study of Vignette 2
+
 
 In this section, to give an overview of the specifics of the learning design, and participant interactions I use vignette to give a snapshot of the interactions of one family. This comprises a table of participant dialogue, screenshots and description of their interactions including gestures followed by a summary interpretation of interactions.
 
@@ -1563,3 +1498,61 @@ rejected notes
 ## Future Work / Omissions
 
 - Further testing of the Maps   -->
+
+
+## MOVED FROM INTRODUCTION 
+
+
+<!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
+
+<!-- MOVE TO PERSONAL However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
+
+<!-- The focus on GDP as unit of analysis is supported in the following observations;
+
+- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
+- Through observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
+-->
+
+<!-- The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs. -->
+
+
+<!-- In addition the following aspects of the use of GDPs merit attention in this chapter:
+
+NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
+
+- the value of completing something concrete a sense of sustaining achievement.
+
+<!-- #### On GDPs as a concept to help analysis -->
+<!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
+Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
+<!-- My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing  -->
+
+<!-- CHECK AGAINST METHODOLOGY
+tie in conceptts of
+- leading activity
+- repeated activity / iteration
+- rising to the concrete - ie different forms of activity.  -->
+
+
+<!-- MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022].  -->
+
+<!-- DROP? We can ask where does knowledge of GDPs in participant come from. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005]. This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results. -->
+
+<!-- In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process. -->
+
+<!-- This study activity covers a wide spectrum of activity, in other chapters,  design stages involving discussion, planning, implementation and playtesting after each new game element. -->
+<!-- THERE IS OVERLAP HERE WITH THE LAST CHAPTER - HOW TO REMOVE THAT AND RETAIN CLARITY ?
+
+Thus in this study activity covers a full spectrum including close analysis of implementation of code structures. However these smaller operations are not worthy of being treated as an activity system in full. WHY MAKE THIS POINT. wHAT IS THE OVERALL MOTIVATION HERE?  -->
+
+<!--
+#### On GDPs as a germ concept to help practical development -->
+
+<!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
+
+<!-- around, game mechanics, game space, game polish and game challenges. -->
+
+<!-- LATER?
+
+AT provides a concept of rising to the concrete which invites analysis of how the construct of  GDPs can be be adapted to serve the development of a game making community at different scopes of activity. To illustrate this concept we can use Marx's concept of exchange as a germ-cell for analysis of capitalism.  -->
+<!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
