--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -1,85 +1,89 @@
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
-    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really){#toc-the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really}
     -   [Research Questions - March
-        2024](#research-questions---march-2024)
-    -   [Chapter outline](#chapter-outline)
-    -   [Study of Vignette 2](#study-of-vignette-2)
+        2024](#research-questions---march-2024){#toc-research-questions---march-2024}
+    -   [Chapter outline](#chapter-outline){#toc-chapter-outline}
+    -   [Study of Vignette
+        2](#study-of-vignette-2){#toc-study-of-vignette-2}
         -   [Descriptive Commentary on Vignette
-            2](#descriptive-commentary-on-vignette-2)
-    -   [Cultural Dimension](#cultural-dimension)
+            2](#descriptive-commentary-on-vignette-2){#toc-descriptive-commentary-on-vignette-2}
+    -   [Use of GDPs in the cultural plane / community level of
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity){#toc-use-of-gdps-in-the-cultural-plane-community-level-of-activity}
         -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of games (developing
-            community norms) - MERGE WITH
-            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others){#toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others}
+            -   [GDP concepts and language used in informal feedback for
+                peers to influence modification of games (developing
+                community norms)
+                -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--){#toc-gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--}
         -   [Evolution and propagation of GDPs concepts during
-            playtesting - MERGE WITH
-            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting){#toc-evolution-and-propagation-of-gdps-concepts-during-playtesting}
         -   [GDPs facilitate the use of wider funds of knowledge /
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest){#toc-gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest}
         -   [Perhaps add here a summary of cultural section if
-            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
+            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful){#toc-perhaps-add-here-a-summary-of-cultural-section-if-useful}
     -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation)
+        participation](#gdps-used-in-the-process-of-guided-participation){#toc-gdps-used-in-the-process-of-guided-participation}
         -   [GDPs and their grouping as a collection or menu of
             suggested options, offer the potential to assist project
             navigation, acting as a framework for code examples and
             step-by-step
-            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
+            tutorials](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials){#toc-gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials}
         -   [GDPs used to scaffold ideation
-            processes](#gdps-used-to-scaffold-ideation-processes)
+            processes](#gdps-used-to-scaffold-ideation-processes){#toc-gdps-used-to-scaffold-ideation-processes}
             -   [Knowledge of game design patterns used to stimulate and
                 communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
+                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas){#toc-knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas}
             -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
+                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping){#toc-the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping}
             -   [GDPs as used by participants in their prioritisation in
                 the ideation
-                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process)
+                process](#gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process){#toc-gdps-as-used-by-participants-in-their-prioritisation-in-the-ideation-process}
         -   [GDPs aiding the process of division of
-            labour](#gdps-aiding-the-process-of-division-of-labour)
+            labour](#gdps-aiding-the-process-of-division-of-labour){#toc-gdps-aiding-the-process-of-division-of-labour}
             -   [Working knowledge of different types of GDPs can help
                 participants to divide project elements by
-                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern)
+                pattern](#working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern){#toc-working-knowledge-of-different-types-of-gdps-can-help-participants-to-divide-project-elements-by-pattern}
             -   [Structuring work processes through implementing modular
                 sub-projects in the form of GDPs can aid division of
-                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour)
+                labour](#structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour){#toc-structuring-work-processes-through-implementing-modular-sub-projects-in-the-form-of-gdps-can-aid-division-of-labour}
             -   [Other notable observations concerning division of
                 labour in the video
-                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data)
+                data](#other-notable-observations-concerning-division-of-labour-in-the-video-data){#toc-other-notable-observations-concerning-division-of-labour-in-the-video-data}
         -   [The role of GDP used in emerging technical
-            processes](#the-role-of-gdp-used-in-emerging-technical-processes)
+            processes](#the-role-of-gdp-used-in-emerging-technical-processes){#toc-the-role-of-gdp-used-in-emerging-technical-processes}
             -   [Use of GDPs to facilitate use of
-                tools](#use-of-gdps-to-facilitate-use-of-tools)
+                tools](#use-of-gdps-to-facilitate-use-of-tools){#toc-use-of-gdps-to-facilitate-use-of-tools}
             -   [Diverse use of technical processes driven by
-                GDPs](#diverse-use-of-technical-processes-driven-by-gdps)
+                GDPs](#diverse-use-of-technical-processes-driven-by-gdps){#toc-diverse-use-of-technical-processes-driven-by-gdps}
             -   [Use of GDPs in the development of shared
-                language](#use-of-gdps-in-the-development-of-shared-language)
+                language](#use-of-gdps-in-the-development-of-shared-language){#toc-use-of-gdps-in-the-development-of-shared-language}
             -   [Code Patching as a guided
-                process](#code-patching-as-a-guided-process)
+                process](#code-patching-as-a-guided-process){#toc-code-patching-as-a-guided-process}
             -   [GDPs used to nurture tactical responses to coding
-                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
+                errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors){#toc-gdps-used-to-nurture-tactical-responses-to-coding-errors}
             -   [Concluding remarks on debugging and
-                revision](#concluding-remarks-on-debugging-and-revision)
+                revision](#concluding-remarks-on-debugging-and-revision){#toc-concluding-remarks-on-debugging-and-revision}
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
-    -   [Discussion](#discussion)
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes){#toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes}
+    -   [Discussion](#discussion){#toc-discussion}
         -   [Concrete and relatable levels of abstraction - linking this
             communities experiences with existing
-            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature){#toc-concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature}
         -   [Design patterns as a intermediate-level, pedagogical
-            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework){#toc-design-patterns-as-a-intermediate-level-pedagogical-framework}
         -   [Implications and beginnings of suggestions for
             practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
             UP - WITHIN THE SECTION THAT THEY REFER
-            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
+            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to){#toc-implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to}
             -   [Tensions between facilitating agency and norming
                 practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
                 AS A LINK TO NEXT CHAPTER IN CONCLUSION
-                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
-    -   [Chapter Conclusion](#chapter-conclusion)
-        -   [Simple table of uses](#simple-table-of-uses)
+                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion){#toc-tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion}
+    -   [Chapter
+        Conclusion](#chapter-conclusion){#toc-chapter-conclusion}
+        -   [Simple table of
+            uses](#simple-table-of-uses){#toc-simple-table-of-uses}
         -   [Summary of the pedagogical opportunities of Game Design
-            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
-        -   [Transition to next chapter](#transition-to-next-chapter)
+            Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns){#toc-summary-of-the-pedagogical-opportunities-of-game-design-patterns}
+        -   [Transition to next
+            chapter](#transition-to-next-chapter){#toc-transition-to-next-chapter}
