--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -357,17 +357,12 @@ REFERENCE THE FOLLOWING IN AN APPENDIX
     Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
 
 
-
-
-
 THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
 A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Olivia's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 
 POSSIBLE END TO THIS SECTION?
 **GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.**
 HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
-
-
 
 
 <!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
@@ -448,6 +443,20 @@ When Toby moves to Bertie's game he playtests it and then looks at the code. He 
 Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 ADD MORE EVIDENCE?
 
+In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed). 
+
+<!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
+
+    Ed: How much jump speed to you have?
+    Ed: Your jump speed is massive.
+    Ed gives advice about tidying up the sprite outlines.
+    Ed: for people with background like yours You can use the “cramping tool””
+    Mark  and Ed then explain – SEE THEIR RECORDING
+    So that the background is clearer.
+
+While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
+
+
 <!-- A different pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. -->
 
 ADD IN FREQUENCY IF POSSIBLE - A ROUGH APPROXIMATION OF WORKING PATTERNS IN P2.
@@ -464,16 +473,6 @@ These new patterns or elements of patterns sometime introduced new concepts and 
 
 While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
 
-<!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
-
-    Ed: How much jump speed to you have?
-    Ed: Your jump speed is massive.
-    Ed gives advice about tidying up the sprite outlines.
-    Ed: for people with background like yours You can use the “cramping tool””
-    Mark  and Ed then explain – SEE THEIR RECORDING
-    So that the background is clearer.
-
-While Ed has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
 
 
 
@@ -1500,7 +1499,7 @@ rejected notes
 - Further testing of the Maps   -->
 
 
-## MOVED FROM INTRODUCTION 
+## MOVED FROM INTRODUCTION
 
 
 <!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
