--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -15,19 +15,18 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Research Questions - March
         2024](#research-questions---march-2024)
     -   [Chapter outline](#chapter-outline)
-    -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
             2](#descriptive-commentary-on-vignette-2)
-    -   [Cultural Dimension](#cultural-dimension)
+    -   [Use of GDPs in the cultural plane / community level of
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDP concepts and language used in informal feedback for
-            peers to influence modification of games (developing
-            community norms) - MERGE WITH
-            BELOW?](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms---merge-with-below)
+            -   [GDP concepts and language used in informal feedback for
+                peers to influence modification of games (developing
+                community norms)
+                -](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games-developing-community-norms--)
         -   [Evolution and propagation of GDPs concepts during
-            playtesting - MERGE WITH
-            ABOVE?](#evolution-and-propagation-of-gdps-concepts-during-playtesting---merge-with-above)
+            playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
         -   [GDPs facilitate the use of wider funds of knowledge /
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
         -   [Perhaps add here a summary of cultural section if
@@ -95,6 +94,8 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         -   [Summary of the pedagogical opportunities of Game Design
             Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
         -   [Transition to next chapter](#transition-to-next-chapter)
+    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
+
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -443,7 +444,7 @@ When Toby moves to Bertie's game he playtests it and then looks at the code. He 
 Exchanges like this show the propagation of GDPs in ways other than documentation or facilitator support. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is possible that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to ask him to do the same. Toby has become a specialist that the community can draw on [see similar research]. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 ADD MORE EVIDENCE?
 
-In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed). 
+In addition to GDPs propagating, practices associated with GDPs propagated too (cropping tool in appendix Ed).
 
 <!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Ed continues.
 
